백엔드 대부분 완료 현재 컨트롤러 테스트만 남은 상태 spring security 완료시 테스트 진행
현재 남아있는건 부동산 rag관련 엔티티 변환하면됨